--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
             <h4>Thank you for visiting! </h4>
             <p style="white-space: pre;">{{selectedType.message}}</p>
-            <button>Let's Go</button><a><span class="RL-SmallText"> Or continue as guest.</span></a>
+            <button ng-click="saveVisit()">Let's Go</button><a ng-click="saveVisit()"><span class="RL-SmallText"> Or continue as guest.</span></a>
         </div>
     </div>
     <div class="row">
