--- a/CMUportfolio.html
+++ b/CMUportfolio.html
@@ -818,8 +818,8 @@ function hideURLbar(){ window.scrollTo(0,1); }
                             <div class="image-top">
                                 <h3>C# Program: DVD Management System</h3>
                                 <p>This is a C# program I made. It is a DVD Management system that you can view, add, edit, search and sort DVD and BluRay records. (Please contect me for program demo.)</p>
-                                <img src="./images/DVD1.jpg" class="img-responsive" alt="" />
-                                <img src="./images/DVD2.jpg" class="img-responsive" alt="" />
+                                <img src="./images/DVD1.JPG" class="img-responsive" alt="" />
+                                <img src="./images/DVD2.JPG" class="img-responsive" alt="" />
                                 <img src="./images/DVD3.JPG" class="img-responsive" alt="" />
                                 <img src="./images/DVD4.JPG" class="img-responsive" alt="" />
                                 <img src="./images/DVD5.JPG" class="img-responsive" alt="" />
